force-app/main/default/objects/Contact/fields/ERx_Events__How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>ERx_Events__How_did_you_hear_about_us__c</fullName>
    <label>How did you hear about us?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>HS Visit</fullName>
            </value>
            <value>
                <fullName>College Fair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>