force-app/main/default/objects/Contact/fields/ERx_Events__Random_String__c.field-meta.xml
<CustomField>
    <fullName>ERx_Events__Random_String__c</fullName>
    <label>Random String</label>
    <length>15</length>
    <type>Text</type>
</CustomField>