force-app/main/default/objects/Contact/fields/ERx_Forms__Create_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>ERx_Forms__Create_Portal_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Portal User</label>
    <type>Checkbox</type>
</CustomField>