force-app/main/default/objects/Contact/fields/ERx_Forms__Create_User_with_Profile__c.field-meta.xml
<CustomField>
    <fullName>ERx_Forms__Create_User_with_Profile__c</fullName>
    <label>Create User with Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student Portal User</fullName>
            </value>
            <value>
                <fullName>Health Sciences Portal Login User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>