force-app/main/default/objects/Contact/fields/ERx_Forms__TestClassPicklist__c.field-meta.xml
<CustomField>
    <fullName>ERx_Forms__TestClassPicklist__c</fullName>
    <label>TestClassPicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
            <value>
                <fullName>Test3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>