force-app/main/default/objects/Contact/fields/eSports_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>eSports_Additional_Info__c</fullName>
    <label>eSports Additional Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>