force-app/main/default/objects/Contact/fields/eSports_interested__c.field-meta.xml
<CustomField>
    <fullName>eSports_interested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eSports interested</label>
    <type>Checkbox</type>
</CustomField>