force-app/main/default/objects/Contact/fields/First_Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Inquiry_Date__c</fullName>
    <label>First Inquiry Date</label>
    <type>Date</type>
</CustomField>