force-app/main/default/objects/Contact/fields/Game_Position_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Game_Position_of_Interest__c</fullName>
    <label>Game/Position of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex Legends</fullName>
            </value>
            <value>
                <fullName>Call of Duty</fullName>
            </value>
            <value>
                <fullName>Chess</fullName>
            </value>
            <value>
                <fullName>Counter-Strike</fullName>
            </value>
            <value>
                <fullName>FIFA</fullName>
            </value>
            <value>
                <fullName>Fighting Games (Tekken, Mortal Kombat, etc.)</fullName>
            </value>
            <value>
                <fullName>Fortnite</fullName>
            </value>
            <value>
                <fullName>Halo</fullName>
            </value>
            <value>
                <fullName>Hearthstone</fullName>
            </value>
            <value>
                <fullName>League of Legends</fullName>
            </value>
            <value>
                <fullName>Madden</fullName>
            </value>
            <value>
                <fullName>NBA 2K</fullName>
            </value>
            <value>
                <fullName>Overwatch</fullName>
            </value>
            <value>
                <fullName>Rainbow 6: Siege</fullName>
            </value>
            <value>
                <fullName>Rocket League</fullName>
            </value>
            <value>
                <fullName>Super Smash Bros. Ultimate</fullName>
            </value>
            <value>
                <fullName>Valorant</fullName>
            </value>
            <value>
                <fullName>Student Staff (Production, Social Media, Managing, etc.)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>