force-app/main/default/objects/Contact/fields/Gender_Identity_Formula__c.field-meta.xml
<CustomField>
    <fullName>Gender_Identity_Formula__c</fullName>
    <description>Used by J1 integration</description>
    <formula>TEXT( GenderIdentity )</formula>
    <label>Gender Identity (Formula)</label>
    <type>Text</type>
</CustomField>