force-app/main/default/objects/Contact/fields/hed__AlternateEmail__c.field-meta.xml
<CustomField>
    <fullName>hed__AlternateEmail__c</fullName>
    <description>An optional email address not captured in other email fields.</description>
    <inlineHelpText>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</inlineHelpText>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>