force-app/main/default/objects/Contact/fields/hed__Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Citizenship_Status__c</fullName>
    <description>The Contact&apos;s citizenship status.</description>
    <inlineHelpText>The Contact&apos;s citizenship status.</inlineHelpText>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Citizen or U.S. National</fullName>
            </value>
            <value>
                <fullName>U.S. Permanent Resident</fullName>
            </value>
            <value>
                <fullName>U.S. Refugee or Asylee</fullName>
            </value>
            <value>
                <fullName>Other (Non-U.S.)</fullName>
            </value>
            <value>
                <fullName>Resident Non U.S. Citizen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>