force-app/main/default/objects/Contact/fields/hed__HIPAA_Detail__c.field-meta.xml
<CustomField>
    <fullName>hed__HIPAA_Detail__c</fullName>
    <description>Can be used to store information about the student Contact, such as the names of related Contacts authorized to communicate about the student. May require restricted field visibility so that only authorized users can view.</description>
    <label>HIPAA Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>