force-app/main/default/objects/Contact/fields/hed__Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>hed__Preferred_Email__c</fullName>
    <description>The email (University, Work, Alternate) that this Contact prefers you to use.</description>
    <inlineHelpText>Which email should be used for most communications involving this Contact?</inlineHelpText>
    <label>Preferred Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Alternate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>