force-app/main/default/objects/Contact/fields/hed__PreferredPhone__c.field-meta.xml
<CustomField>
    <fullName>hed__PreferredPhone__c</fullName>
    <description>The phone (Work, Home, Mobile, Other) that this Contact prefers you to use.</description>
    <inlineHelpText>Which phone number should be used for most communications involving this Contact?</inlineHelpText>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>