force-app/main/default/objects/Contact/fields/hed__Secondary_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Secondary_Address_Type__c</fullName>
    <description>Indicate what kind of address the Secondary Address is, for example, Work, Home, or Other.</description>
    <inlineHelpText>What type of address is the other address?</inlineHelpText>
    <label>Secondary Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Vacation Residence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>