force-app/main/default/objects/Contact/fields/hed__Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>hed__Social_Security_Number__c</fullName>
    <description>Social Security Number. Encrypted for confidentiality. Only users with the View Encrypted Data permission can see the unencrypted value.</description>
    <label>Social Security Number</label>
    <length>12</length>
    <maskChar>X</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>