force-app/main/default/objects/Contact/fields/Hispanic_Latino__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_Latino__c</fullName>
    <label>Hispanic/Latino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>