force-app/main/default/objects/Contact/fields/Home_Base_Installation__c.field-meta.xml
<CustomField>
    <fullName>Home_Base_Installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Base Installation</label>
    <referenceTo>Military__c</referenceTo>
    <relationshipLabel>Contacts (Home Base Installation)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>