force-app/main/default/objects/Contact/fields/HSCM_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>HSCM_Source_Code__c</fullName>
    <label>HSCM Source Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>