force-app/main/default/objects/Contact/fields/Hubspot_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Created_Date__c</fullName>
    <description>Synced from Hubspot</description>
    <label>Hubspot Created Date</label>
    <type>DateTime</type>
</CustomField>