force-app/main/default/objects/Contact/fields/Hubspot_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_ID__c</fullName>
    <label>Hubspot ID</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>