force-app/main/default/objects/Contact/fields/Integration_Flag_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Integration_Flag_Birthdate__c</fullName>
    <description>Integration flag related to birthdate.</description>
    <inlineHelpText>Integration flag related to birthdate.</inlineHelpText>
    <label>Birthdate (Integration Flag)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>