force-app/main/default/objects/Contact/fields/Integration_Flag_Contact_Detail__c.field-meta.xml
<CustomField>
    <fullName>Integration_Flag_Contact_Detail__c</fullName>
    <description>Integration flag related to contact details such as names, addresses, phone numbers, race/ethnicity, etc.</description>
    <inlineHelpText>Integration flag related to contact details such as names, addresses, phone numbers, race/ethnicity, etc.</inlineHelpText>
    <label>Contact Detail (Integration Flag)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>