force-app/main/default/objects/Contact/fields/Integration_Flag_Match_Results__c.field-meta.xml
<CustomField>
    <fullName>Integration_Flag_Match_Results__c</fullName>
    <description>Integration flag detailing match results where match/create was not possible.</description>
    <inlineHelpText>Integration flag detailing match results where match/create was not possible.</inlineHelpText>
    <label>Match Results (Integration Flag)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>