force-app/main/default/objects/Contact/fields/Integration_Flag_SSN__c.field-meta.xml
<CustomField>
    <fullName>Integration_Flag_SSN__c</fullName>
    <description>Integration flag related to SSN.</description>
    <inlineHelpText>Integration flag related to SSN.</inlineHelpText>
    <label>SSN (Integration Flag)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>