force-app/main/default/objects/Contact/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>Integration Status field from Application</description>
    <formula>EnrollmentrxRx__Active_Enrollment_Opportunity__r.Integration_Status__c</formula>
    <label>Integration Status (Active App)</label>
    <type>Text</type>
</CustomField>