force-app/main/default/objects/Contact/fields/Interested_In_Student_Housing__c.field-meta.xml
<CustomField>
    <fullName>Interested_In_Student_Housing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested In Student Housing?</label>
    <type>Checkbox</type>
</CustomField>