force-app/main/default/objects/Contact/fields/Intrested_Online_On_ground__c.field-meta.xml
<CustomField>
    <fullName>Intrested_Online_On_ground__c</fullName>
    <label>Intrested Online/On ground</label>
    <length>20</length>
    <type>Text</type>
</CustomField>