force-app/main/default/objects/Contact/fields/Last_Contact_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Sync_Date__c</fullName>
    <label>Last Contact Sync Date</label>
    <type>DateTime</type>
</CustomField>