force-app/main/default/objects/Contact/fields/Latest_Source__c.field-meta.xml
<CustomField>
    <fullName>Latest_Source__c</fullName>
    <label>Latest Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ORGANIC_SEARCH</fullName>
            </value>
            <value>
                <fullName>PAID_SEARCH</fullName>
            </value>
            <value>
                <fullName>EMAIL_MARKETING</fullName>
            </value>
            <value>
                <fullName>SOCIAL_MEDIA</fullName>
            </value>
            <value>
                <fullName>REFERRALS</fullName>
            </value>
            <value>
                <fullName>OTHER_CAMPAIGNS</fullName>
            </value>
            <value>
                <fullName>DIRECT_TRAFFIC</fullName>
            </value>
            <value>
                <fullName>OFFLINE</fullName>
            </value>
            <value>
                <fullName>PAID_SOCIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>