force-app/main/default/objects/Contact/fields/LEA_Active_App_Admissions_Status__c.field-meta.xml
<CustomField>
    <fullName>LEA_Active_App_Admissions_Status__c</fullName>
    <formula>TEXT(LEA_Active_Application__r.EnrollmentrxRx__Admissions_Status__c)</formula>
    <label>LEA Active App Admissions Status</label>
    <type>Text</type>
</CustomField>