force-app/main/default/objects/Contact/fields/LEA_Active_App_Semester__c.field-meta.xml
<CustomField>
    <fullName>LEA_Active_App_Semester__c</fullName>
    <formula>LEA_Active_Application__r.Semester__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LEA Active App Semester</label>
    <type>Text</type>
</CustomField>