force-app/main/default/objects/Contact/fields/LEA_Active_Application__c.field-meta.xml
<CustomField>
    <fullName>LEA_Active_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LEA Active Application</label>
    <referenceTo>EnrollmentrxRx__Enrollment_Opportunity__c</referenceTo>
    <relationshipLabel>Contacts (LEA Active Application)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>