force-app/main/default/objects/Contact/fields/LEA_Active_Application_Owner__c.field-meta.xml
<CustomField>
    <fullName>LEA_Active_Application_Owner__c</fullName>
    <formula>LEA_Active_Application__r.Owner:User.FirstName &amp; &quot;&quot; &amp;  LEA_Active_Application__r.Owner:User.LastName</formula>
    <label>LEA Active Application Owner</label>
    <type>Text</type>
</CustomField>