force-app/main/default/objects/Contact/fields/LEA_Active_Application_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>LEA_Active_Application_Owner_Email__c</fullName>
    <formula>LEA_Active_Application__r.Owner_Email__c</formula>
    <label>LEA Active Application Owner Email</label>
    <type>Text</type>
</CustomField>