force-app/main/default/objects/Contact/fields/LEA_Applicant__c.field-meta.xml
<CustomField>
    <fullName>LEA_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TBD LEA Applicant</label>
    <type>Checkbox</type>
</CustomField>