force-app/main/default/objects/Contact/fields/LEA_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>LEA_Lock_Date__c</fullName>
    <formula>LEA_Active_Application__r.LEA_Lock_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LEA Lock Date</label>
    <type>Text</type>
</CustomField>