force-app/main/default/objects/Contact/fields/LEAApplicant__c.field-meta.xml
<CustomField>
    <fullName>LEAApplicant__c</fullName>
    <label>LEA Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>