force-app/main/default/objects/Contact/fields/Legal_Sex__c.field-meta.xml
<CustomField>
    <fullName>Legal_Sex__c</fullName>
    <description>this is legal sex</description>
    <label>Legal Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-2</fullName>
                <label>Male</label>
            </value>
            <value>
                <fullName>-1</fullName>
                <label>Female</label>
            </value>
            <value>
                <fullName>-4</fullName>
                <label>Transgender Male</label>
            </value>
            <value>
                <fullName>-3</fullName>
                <label>Transgender Female</label>
            </value>
            <value>
                <fullName>-5</fullName>
                <label>Non-binary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>