force-app/main/default/objects/Contact/fields/Login_Portal_Control__c.field-meta.xml
<CustomField>
    <fullName>Login_Portal_Control__c</fullName>
    <label>Login Portal Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UNDG</fullName>
                <label>Undergraduate</label>
            </value>
            <value>
                <fullName>GRAD</fullName>
                <label>Graduate</label>
            </value>
            <value>
                <fullName>JD</fullName>
                <label>St. Francis</label>
            </value>
            <value>
                <fullName>HS</fullName>
                <label>Running Start</label>
            </value>
            <value>
                <fullName>GST</fullName>
                <label>Guest</label>
            </value>
            <value>
                <fullName>RS</fullName>
                <isActive>false</isActive>
                <label>Running Start</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>