force-app/main/default/objects/Contact/fields/mailing_state_code__c.field-meta.xml
<CustomField>
    <fullName>mailing_state_code__c</fullName>
    <formula>text(MailingState__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mailing state code</label>
    <type>Text</type>
</CustomField>